kubernetes/load_gen.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: cars-loadgen-deployment
spec:
  selector:
    matchLabels:
      app: cars_loadgen
  replicas: 1
  template:
    metadata:
      labels:
        app: cars_loadgen
    spec:
      containers:
      - name: jmeter
        image: tombatchelor/carsloadgen:7.0
        imagePullPolicy: Always
        args:
        - -n -Jthreads=1 -t /tests/SuperCars.jmx
        volumeMounts:
        - name: user-lists
          mountPath: /tmp/users
        lifecycle:
          postStart:
            exec:
              command:
              - /bin/sh
              - -c
              - cp /tmp/users/emails.csv /tests/users.csv
      volumes:
      - name: user-lists
        secret:
          secretName: user-lists
