kubernetes/oom.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: cars-oom-deployment
spec:
  selector:
    matchLabels:
      app: cars_oom
  replicas: 1
  template:
    metadata:
      labels:
        app: cars_oom
    spec:
      containers:
      - name: jmeter
        image: tombatchelor/oom:latest
        imagePullPolicy: Always
