kubernetes/cars_app-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cars-deployment-web
spec:
  selector:
    matchLabels:
      app: cars_web
  replicas: 3 
  template:
    metadata:
      labels:
        app: cars_web
    spec:
      containers:
      - name: web-server
        image: tombatchelor/cars_web:8.1
        imagePullPolicy: Always
        ports:
        - name: cars-web-port
          containerPort: 80
        volumeMounts:
        - name: zipkin-config
          mountPath: /etc/nginx/zipkin
          readOnly: true
      volumes:
      - name: zipkin-config
        configMap:
          defaultMode: 420
          name: zipkin-nginx-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-insurance-go
spec:
  selector:
    matchLabels:
      app: car_insurance
  replicas: 1
  template:
    metadata:
      labels:
        app: car_insurance
      annotations:
        prometheus.io/path: 'metrics'
        prometheus.io/port: '8000'
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: insurance-quoter
        image: tombatchelor/car-insurance:8.0
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-loan-dotnet
spec:
  selector:
    matchLabels:
      app: car_loan
  replicas: 1
  template:
    metadata:
      labels:
        app: car_loan
    spec:
      containers:
      - name: loan-quoter
        image: tombatchelor/car-loan:8.0
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-rds
spec:
  selector:
    app: cars_db
  type: ExternalName
  externalName: observe-demo-database.cluster-cqfidmbhyufo.us-east-1.rds.amazonaws.com
---
apiVersion: v1
kind: Service
metadata:
  name: cars-app
spec:
  selector:
    app: cars_app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: cars-app-port
---
apiVersion: v1
kind: Service
metadata:
  name: cars-web
spec:
  selector:
    app: cars_web
  ports:
  - protocol: TCP
    port: 80
    targetPort: cars-web-port
---
apiVersion: v1
kind: Service
metadata:
  name: insurance
spec:
  selector:
    app: car_insurance
  ports:
  - protocol: TCP
    port: 8000
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: car-loan
spec:
  selector:
    app: car_loan
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
