kubernetes/cars_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cars-deployment-web
spec:
  selector:
    matchLabels:
      app: cars_web
  replicas: 1 
  template:
    metadata:
      labels:
        app: cars_web
    spec:
      containers:
      - name: web-server
        image: tombatchelor/cars_web:8.0
        imagePullPolicy: Always
        ports:
        - name: cars-web-port
          containerPort: 80
        volumeMounts:
        - name: zipkin-config
          mountPath: /etc/nginx/zipkin
          readOnly: true
      volumes:
      - name: zipkin-config
        configMap:
          defaultMode: 420
          name: zipkin-nginx-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cars-db-deployment
spec:
  selector:
    matchLabels:
      app: cars_db
  replicas: 1
  template:
    metadata:
      labels:
        app: cars_db
    spec:
      containers:
      - name: db-server
        image: tombatchelor/carsdb:8.0
        imagePullPolicy: Always
        ports:
        - name: mysql
          containerPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-insurance-go
spec:
  selector:
    matchLabels:
      app: car_insurance
  replicas: 1
  template:
    metadata:
      labels:
        app: car_insurance
    spec:
      containers:
      - name: insurance-quoter
        image: tombatchelor/car-insurance:8.0
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-loan-dotnet
spec:
  selector:
    matchLabels:
      app: car_loan
  replicas: 1
  template:
    metadata:
      labels:
        app: car_loan
    spec:
      containers:
      - name: loan-quoter
        image: tombatchelor/car-loan:8.0
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-session-manager-deployment
spec:
  selector:
    matchLabels:
      app: redis_session_manager
  replicas: 1
  template:
    metadata:
      labels:
        app: redis_session_manager
    spec:
      containers:
      - name: redis
        image: redis:5.0
        ports:
        - name: redis
          containerPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cars-prometheus-deployment
spec:
  selector:
    matchLabels:
      app: cars_prometheus
  replicas: 1
  template:
    metadata:
      labels:
        app: cars_prometheus
    spec:
      serviceAccountName: prometheus
      containers:
      - name: prometheus
        image: prom/prometheus:v2.10.0
        imagePullPolicy: Always
        args:
        - --config.file=/etc/prometheus/config.yaml
        ports:
        - containerPort: 9090
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /etc/prometheus
          readOnly: true
      volumes:
      - name: config
        configMap:
          defaultMode: 420
          name: prometheus-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  selector:
    matchLabels:
      app: jenkins
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: marshaller
      containers:
      - name: jenkins
        image: tombatchelor/jenkins:8.0
        imagePullPolicy: Always
        ports:
        - name: jenkins-ui
          containerPort: 8080
        volumeMounts:
        - name: jenkins-config
          mountPath: /tmp/secrets
        - name: user-lists
          mountPath: /tmp/users
        - name: dockersock
          mountPath: "/var/run/docker.sock"
        - name: git-key
          mountPath: /keys
        lifecycle:
          postStart:
            exec:
              command:
              - /bin/sh
              - -c
              - cp /tmp/secrets/*.xml /var/jenkins_home/
      volumes:
      - name: jenkins-config
        secret:
          secretName: jenkins-config
      - name: user-lists
        secret:
          secretName: user-lists
      - name: dockersock
        hostPath:
          path: /var/run/docker.sock
      - name: git-key
        secret:
          secretName: git-key
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-rds
spec:
  selector:
    app: cars_db
  ports:
  - protocol: TCP
    port: 3306
    targetPort: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: cars-app
spec:
  selector:
    app: cars_app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: cars-app-port
---
apiVersion: v1
kind: Service
metadata:
  name: cars-web
spec:
  selector:
    app: cars_web
  ports:
  - protocol: TCP
    port: 80
    targetPort: cars-web-port
---
apiVersion: v1
kind: Service
metadata:
  name: insurance
spec:
  selector:
    app: car_insurance
  ports:
  - protocol: TCP
    port: 8000
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: car-loan
spec:
  selector:
    app: car_loan
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis_session_manager
  ports:
  - protocol: TCP
    port: 6379
